# Matching_Game

./: .gitignore  README.md  arxikes_synarthseis.py  compose.prod.yaml  compose.yaml  matching_game.py  pythonex.py  zhtoumena_xrhsth.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  store.py
backend/app/api/: routes.py
backend/app/game/: __init__.py  deck.py  rules.py  state.py
backend/app/schemas/: game.py
backend/tests/: test_api.py  test_deck.py  test_rules.py  test_state.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/game/: Board.tsx  GameOver.tsx  GameSetup.tsx  HelpButton.tsx  HelpDialog.tsx  LanguageToggle.tsx  PlayingCard.tsx  Scoreboard.tsx  TurnBanner.tsx
frontend/src/components/ui/: button.tsx  panel.tsx
frontend/src/hooks/: useGame.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: el.json  en.json
frontend/src/lib/: types.ts
